Added new post and fixed Disqus

--- a/_posts/2007-12-15-more-better-familiarize-yourself-with-a-toolkit-name-in-progress--1.html
+++ b/_posts/2007-12-15-more-better-familiarize-yourself-with-a-toolkit-name-in-progress--1.html
@@ -1,4 +1,5 @@
 ---
+disqus_old: true
 layout: post
 title: "More Better Familiarize Yourself with a Toolkit? (Name in progress) - #1"
 description: ""
