--- a/_posts/2008-12-16-playing-with-azure-and-sql-data-services-no-random-access-paging.html
+++ b/_posts/2008-12-16-playing-with-azure-and-sql-data-services-no-random-access-paging.html
@@ -1,4 +1,5 @@
 ---
+disqus_old: true
 layout: post
 title: "Playing with Azure and SQL Data Services: No \"Random Access Paging\""
 description: ""
