--- a/_posts/2008-11-09-sorry-about-the-delay-on-vidspeak-part-3.html
+++ b/_posts/2008-11-09-sorry-about-the-delay-on-vidspeak-part-3.html
@@ -7,4 +7,4 @@ category:
 tags: []
 permalink: /blog/2008/11/9/sorry-about-the-delay-on-vidspeak-part-3.html
 ---
-<p>VidSpeak Part 3 is a little delayed.&#160; However, the main reason is that I've been working on a bunch of other school projects, which I plan to post about in future posts :).&#160; Stay tuned for the last part of VidSpeak and some more stuff ;)</p>
+<p>VidSpeak Part 3 is a little delayed. However, the main reason is that I've been working on a bunch of other school projects, which I plan to post about in future posts :). Stay tuned for the last part of VidSpeak and some more stuff ;)</p>
